# paintsplats

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docker.yml
paintsplats/: __init__.py  cli.py  lift.py  pipeline.py  prep.py  segment.py  types.py
runpod/: .dockerignore  Dockerfile  handler.py
